# learn-opengl

./: .gitignore  CMakeLists.txt  main.cpp
src/: glad.c  main.cpp
src/Textures/: Texture.cpp  Texture.h
src/shaders/: Shader.cpp  Shader.h  ShaderReader.cpp  ShaderReader.h  fragmentShading.glsl  vertexShading.glsl
